@@ -1,3 +1,9 @@
+2017-10-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/cvu_play_music.c,
+	  support/regression/tests/io.c:
+	  Improve coverage of z80 peephole rules.
+
 2017-10-01 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/gcc-torture-execute-pr80501.c,
